Adicionei a arvore na criação do backup. Adicionei as ferramentas de ping, traceroute e nslookup.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -38,7 +38,7 @@
                     <p style="font-size: 10px; margin: 0; line-height: 1.4em">{{computer.description}}</p>
                 </div>
                 <div class="clear"></div>
-                <input type="hidden" name="computer_id" value="{{computer.id}}" />
+                <input type="hidden" name="computer_id" id="computer_id" value="{{computer.id}}" />
             </div>
             {% endif %}
             
@@ -331,6 +331,106 @@
             			<h2>Criar novo conjunto de arquivos</h2>
             		</div>		<!-- .block_head ends -->
             		<div class="block_content">
+            		    <script type="text/javascript" charset="utf-8">
+                            $(document).ready(function(){
+
+                                function update_tree(root_path) {
+                                    get_tree_path = "/backup/get_tree/";
+                                    computer_id = $('#computer_id').val();
+
+                                    link = $("*[path="+root_path+"]");
+                                    link.append($("<div class='wait'>"));
+                                    wrapper = link.parent();
+
+                                    if (wrapper.find('ul').length) {
+                                        var ul = wrapper.find('>ul');
+                                        if (ul.hasClass('open')) {
+                                            ul.removeClass('open').addClass('closed');
+                                            link.removeClass('directory_open').addClass('directory_closed');
+                                            wrapper.find('ul').slideUp();
+                                        } else if (ul.hasClass('closed')) {
+                                            ul.removeClass('closed').addClass('open');
+                                            link.removeClass('directory_closed').addClass('directory_open');
+                                            wrapper.find('ul').hide();
+                                            wrapper.find('>ul').slideDown();
+                                        }
+                                        link.find(".wait").remove();
+                                        return false;
+                                    }
+
+                                    $.post(get_tree_path, {computer_id: computer_id, path: root_path}, function(data)
+                                    {
+                                        root = $("*[path="+root_path+"]");
+                                        root.addClass('directory_open');
+                                        var ul = $("<ul>").addClass("open").hide();
+                                        ul.insertAfter($("*[path="+root_path+"]"));
+                                        for (var item in data) {
+                                            path = data[item];
+                                            root_path_re = new RegExp("^" + root_path, "g");
+                                            path_name = path.replace(root_path_re, '');
+
+                                            var input = $("<input>").attr("type", "checkbox").attr("name", "path").val(path);
+
+                                            // If is a directory.
+                                            if (path.match("/$") == "/" || path.match("\\$") == "\\") {
+                                                attr_class = "directory";
+                                                mime_class = "folder";
+                                                var inner = $("<a>").attr("href", "#").attr("path", path).text(path_name);
+                                            } else {
+                                                attr_class = "file";
+                                                if (path_name.split('.').length > 1) {
+                                                    mime_class = "ext_" + $(path_name.split('.')).eq(-1)[0].toLowerCase();
+                                                } else {
+                                                    mime_class = "";
+                                                }
+
+                                                var inner = $("<span>").html(path_name);
+                                            }
+
+                                            var file = $("<span>").html(inner);
+
+                                            input.change(function(){
+                                                checked = $(this).attr("checked") && "checked" || "";
+                                                $(this).parent().find('input').attr("checked", checked);
+                                            });
+                                            input.prependTo(file);
+
+                                            var li = $("<li>").addClass(attr_class).addClass(mime_class);
+                                            file.appendTo(li);
+                                            li.appendTo(ul);
+                                        }
+                                        ul.slideDown();
+                                        $(".tree a").unbind("click").click(function()
+                                        {
+                                            update_tree($(this).attr("path"));
+                                            return false;
+                                        });
+
+                                        link.find(".wait").remove();
+                                        // console.log(data);
+                                    }, "json");
+                                }
+
+                                $('#update_tree').click(function()
+                                {
+                                    // $('.tree').attr("path", "/");
+                                    update_tree('/');
+                                    return false;
+                                });
+
+                                $(".tree a").click(function()
+                                {
+                                    update_tree($(this).attr("path"));
+                                    return false;
+                                });
+                            });
+                        </script>
+
+                        <!-- <a href="#" id="update_tree">atualizar arvore</a> -->
+                        <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
+                        
+            		    
+            		    {% if 0 %}
                         <p>
                             <label for="fileset_name">Nome do conjunto de arquivos:</label><br/>
                             <input type="text" name="fileset_name" id="fileset_name" class="text small" />
@@ -341,6 +441,7 @@
                                 <li id="filepath_template" style="display: none"><input type="text" name="fileset_name" id="fileset_name" class="text medium" /> <span class="add"><img src="/media/icons/plus.png" /></span> <span class="del"><img src="/media/icons/minus.png" /></span></li>
                             </ol>
                         </p>
+                        {% endif %}
             		</div>		<!-- .block_content ends -->
             		<div class="bendl"></div>
             		<div class="bendr"></div>
