--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -68,10 +68,12 @@
 				
 				<ul id="nav">
 					<li class="active"><a href="/base/home">Painel</a></li>
-					<li><a href="/computers">Computador</a>
+					<li><a href="#">Computador</a>
                         <ul>
                             <li><a href="/computers/list">Listar</a></li>
                             <li><a href="/computers/add">Adicionar</a></li>
+                            <li><a href="/backup/add">Adicionar Backup</a></li>
+                            <li><a href="/procedures/list">Procedimentos</a></li>
                         </ul>
 					</li>
 					<li><a href="#">Armazenamento</a>
@@ -84,9 +86,16 @@
 					    <ul>
                             <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
                             <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
+                            <li><a href="/procedures/list_offsite">Procedimentos</a></li>
                         </ul>
 				    </li>
-					<li><a href="#">Ferramentas</a></li>
+					<li><a href="#">Ferramentas</a>
+					    <ul>
+                            <li><a href="/system/network_tool/ping/">Ping</a></li>
+                            <li><a href="/system/network_tool/traceroute/">Traceroute</a></li>
+                            <li><a href="/system/network_tool/nslookup/">NSLookup</a></li>
+                        </ul>
+					</li>
 					<li><a href="#">Configurações</a>
                         <ul>
                             <li><a href="/users/password_change">Alterar Senha</a></li>
