--- a/nimbus/base/templates/base_login.html
+++ b/nimbus/base/templates/base_login.html
@@ -42,6 +42,9 @@
 	<div id="hld">
 	
 		<div class="wrapper">		<!-- wrapper begins -->
+		    
+		    <div class="logo_center"><img src="/media/images/nimbus_logo_professional.png" /></div>
+		    
 			
 			<div class="block small center login">
 			
