--- a/nimbus/system/templates/system_network_tool.html
+++ b/nimbus/system/templates/system_network_tool.html
@@ -54,7 +54,7 @@
             <p>
                 <label for="ip">IP ou domínio:</label><br/>
                 <input type="text" name="ip" value="" class="text small" id="ip" />
-                <input type="submit" class="submit" value="Ping" />
+                <input type="submit" class="submit" value="Executar" />
                 <input type="hidden" name="type" value="{{type}}" id="type" />
             </p>
         </form>
