Inlcuindo link para adicionar novo grupo dentro do formulário de adicionar/editar computador e corrigindo problema com formulário de criar backup no chrome.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -96,7 +96,7 @@
                 <script type="text/javascript" charset="utf-8">
     	            $(document).ready(function(){
     		            $('#schedule_id').change(function(){
-    		                if ($('#schedule_id :checked').attr('id') == 'new_schedule') {
+    		                if ($('#schedule_id :selected').attr('id') == 'new_schedule') {
     		                    $('#schedule').slideDown();
     		                } else {
     		                    $('#schedule').slideUp();
@@ -270,7 +270,7 @@
             	<script type="text/javascript" charset="utf-8">
     	            $(document).ready(function(){
     		            $('#fileset_id').change(function(){
-    		                if ($('#fileset_id :checked').attr('id') == 'new_fileset') {
+    		                if ($('#fileset_id :selected').attr('id') == 'new_fileset') {
     		                    $('#fileset').slideDown();
     		                } else {
     		                    $('#fileset').slideUp();
