--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -67,7 +67,15 @@
 				<h1><a href="#">Nimbus</a></h1>
 				
 				<ul id="nav">
-					<li class="active"><a href="/base/home">Painel</a></li>
+					<li class="active"><a href="/base/home">Estatísticas</a></li>
+					<li class="active"><a href="#">Backup</a>
+					    <ul>
+					        <li><a href="/backup/add">Criar backup</a></li>
+                            <li><a href="/computers/list">Listar computador</a></li>
+                            <li><a href="/computers/add">Adicionar computador</a></li>
+                            <li><a href="/procedures/list">Listar procedimentos</a></li>
+                        </ul>
+					</li>
 					<li><a href="#">Computador</a>
                         <ul>
                             <li><a href="/computers/list">Listar</a></li>
