--- a/nimbus/computers/templates/base_computers.html
+++ b/nimbus/computers/templates/base_computers.html
@@ -28,9 +28,13 @@ $(document).ready(function(){
                 update_groups();
                 alert('Grupo "' + group_name + '" adicionado.');
             } else {
-                alert('Não foi possível inserir o grupo.');
+                alert('Não foi possível inserir o grupo. Um grupo com o mesmo nome já existe.');
             }
         }, "json");
+        return false;
+    });
+    $('#add_group_cancel').click(function(){
+        $('.add_group').slideUp();
         return false;
     });
 })
@@ -54,7 +58,7 @@ $(document).ready(function(){
             <a href="#" id="add_group" style="margin-top: -10px; float: left;">Adicionar grupo</a>
             <div class="add_group" style="clear: both; padding: 10px; margin: 15px 0 10px; background: #FFF2A7; display: none">
                 <label>Nome do grupo:</label>
-                <input type="text" name="group" value="" class="text small" id="add_group_name" /> <input type="submit" class="submit" value="Adicionar" id="add_group_submit" />
+                <input type="text" name="group" value="" class="text small" id="add_group_name" /> <input type="submit" class="submit" value="Adicionar" id="add_group_submit" /> ou <a href="#" id="add_group_cancel">Cancelar</a>
             </div>
             <br/>
             <p><input type="submit" class="submit" value="Confirm" /></p>
