--- a/nimbus/system/templates/system_network_tool.html
+++ b/nimbus/system/templates/system_network_tool.html
@@ -27,16 +27,19 @@
             $(document).ready(function(){
                 $('#form_ping').submit(function(){
                     $('#mensagem').slideUp().empty();
+                    $('#mensagem').html('<img src="/media/icons/loading_bar.gif" /> Aguarde...');
+                    $('#mensagem').slideDown();
+                    
                     var type = $('#type').val();
                     $.post("/system/create_or_view_network_tool/", {ip: $('#ip').val(), type: type},
                         function(data){
+                            $('#mensagem').empty();
                             if (!data) {
                                 $('#mensagem').html("Erro ao executar o ping.");
                                 return false;
                             }
                             
                             $('#mensagem').html(data.msg.replace(/\n/g, "<br/>"));
-                            $('#mensagem').slideDown();
                         },
                         "json");
                     return false;
