--- a/nimbus/base/templates/table_chart.html
+++ b/nimbus/base/templates/table_chart.html
@@ -1,5 +1,7 @@
 <h3>{{table.title}}</h3>
-<table class="stats" rel="{{table.type}}" cellpadding="0" cellspacing="0" width="100%">
+<table class="stats" rel="{{table.type}}" cellpadding="0" cellspacing="0"
+       style="width: {{table.width}}"
+       width="{% if table.width %}{{table.width}}{% else %}100%{% endif %}">
 	<thead>
 		<tr>
 		    <td>&nbsp;</td>
