--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -10,6 +10,14 @@
         });
     });
 </script>
+
+<style type="text/css" media="screen">
+    .computer.desativado {
+        background: #FFE5EB !important;
+        border: 2px solid #e7696d;
+        -moz-border-radius: 5px; 
+    }
+</style>
 {% endblock %}
 
 {% block page %}
@@ -26,7 +34,7 @@
         <p><a href="/computers/add">Adicionar computador</a></p>
         <div class="computers">
         {% for comp in computers %}
-            <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
+            <div class="computer {% if not comp.active %}desativado{% endif %}" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
                 <div class="left" style="float: left; width: 250px">
                     <div class="title">
                         <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
@@ -38,6 +46,15 @@
                 </div>
                 <div class="right" style="float: right; width: 600px">
                     <div style="float: right">
+                        {% if not comp.active %}
+                        <form action="/computers/{{comp.id}}/activate/" method="post" style="float: right">
+                            <input type="submit" class="submit tiny" value="Ativar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                        </form>
+                        {% else %}
+                        <form action="/computers/{{comp.id}}/deactivate/" method="post" style="float: right">
+                            <input type="submit" class="submit tiny" value="Desativar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                        </form>
+                        {% endif %}
                         <form action="/restore/{{comp.id}}/view/" method="post" style="float: right">
                             <input type="submit" class="submit tiny" value="Restaurar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
                         </form>
