--- a/nimbus/computers/templates/computers_view.html
+++ b/nimbus/computers/templates/computers_view.html
@@ -24,6 +24,7 @@
 
     <div class="block_content">
         <p><a href="/computers/add">Adicionar computador</a> • <a href="/computers/">Visualizar todos os computadores</a></p>
+
         <div class="computers">
             <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
                 <div class="left" style="float: left; width: 250px">
@@ -35,6 +36,7 @@
                     <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{computer.description}}</p>
                     <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{computer.id}}/edit/">Editar</a> - <a href="/computers/{{computer.id}}/delete/">Remover</a></p>
                 </div>
+
                 <div class="right" style="float: right; width: 600px">
                     {% if not computer.procedure_set.count %}
                         <div class="message warning">
@@ -71,7 +73,29 @@
                 <div class="clear"></div>
             </div>
         </div>
-    
+        <div class="block-executados">
+	        <div style="float: left; width: 49%">
+    		    <h3>Últimos backups executados</h3>
+    		    <div>
+    		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>19/09/2010 10:25</small> Servidor Web <small>(13 arquivos)</small></div>
+    		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>19/09/2010 10:15</small> Sala A - Comp 1 <small>(5 arquivos)</small></div>
+    		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/exclamation.png" /> <small>19/09/2010 07:35</small> Diretor financeiro <small>(72 arquivos)</small></div>
+    		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>18/09/2010 23:00</small> Servidor de banco de dados <small>(30 arquivos)</small></div>
+    		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>17/09/2010 10:00</small> Diretor comercial <small>(124 arquivos)</small></div>
+    		    </div>
+		    </div>
+		    <div style="float: right; width: 49%">
+    		    <h3>Backup com falha</h3>
+    		    <div>
+    		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/exclamation.png" /> <small>19/09/2010 07:00</small> Servidor Web</div>
+    		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/exclamation.png" /> <small>19/09/2010 07:00</small> Sala A - Comp 1</div>
+    		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/exclamation.png" /> <small>19/09/2010 07:00</small> Diretor financeiro</div>
+    		    </div>
+		    </div>
+		    <div class="clear"></div>
+		    <p></p>
+		</div>    
+		
     </div>
     
     <div class="bendl"></div>
