--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -10,6 +10,14 @@
         });
     });
 </script>
+
+<style type="text/css" media="screen">
+    .procedure.desativado {
+        background: #FFE5EB !important;
+        border: 2px solid #e7696d;
+        -moz-border-radius: 5px; 
+    }
+</style>
 {% endblock %}
 
 {% block page %}
