--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -14,6 +14,10 @@
 		@import url("/media/lib/css/facebox.css");
 		@import url("/media/lib/css/visualize.css");
 		@import url("/media/lib/css/date_input.css");
+		@import url("/media/js/iphone-style-checkboxes/style.css");
+		@import url("/media/js/progressbar/jquery.ui.all.css");
+		
+		
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
@@ -32,16 +36,28 @@
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
 	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.filetree.js"></script>
+	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
+	<script src="/media/js/jquery.sparkline.min.js" type="text/javascript"></script>
+	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript" charset="utf-8"></script>	
+	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript" charset="utf-8"></script>
+
+	
 	
 	<script type="text/javascript" charset="utf-8">
         $(document).ready( function() {
+            $(':checkbox').iphoneStyle({ checkedLabel: 'Sim', uncheckedLabel: 'Não' });
+
             $('.filetree').each(function(){
                 script = $(this).attr("ref");
                 $(this).fileTree({ root: '/media/lib/demo/', script: script }, function(file) { 
                     alert(file);
                 });
             })
-
+            $(".iPhoneCheckContainer").css("width", "85px");
+            $(".sparklines").sparkline('html', {width: "300", height: "150px" })
+            
+            
         });
 	</script>
 	
@@ -74,27 +90,24 @@
                             <li><a href="/computers/list">Listar computador</a></li>
                             <li><a href="/computers/add">Adicionar computador</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
+                            <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
+                            <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
+                            <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
+                            <li><a href="/storages/list">Listar Armazenamento</a></li>
+                            <li><a href="/storages/add">Adicionar Armazenamento</a></li>                            
                         </ul>
 					</li>
-					<li><a href="#">Computador</a>
+                    <!-- <li><a href="#">Computador</a>
                         <ul>
                             <li><a href="/computers/list">Listar</a></li>
                             <li><a href="/computers/add">Adicionar</a></li>
                             <li><a href="/backup/add">Adicionar Backup</a></li>
                             <li><a href="/procedures/list">Procedimentos</a></li>
                         </ul>
-					</li>
-					<li><a href="#">Armazenamento</a>
+                    </li> -->
+					<li><a href="#">Restaurar</a>
 					    <ul>
-                            <li><a href="/storages/list">Listar</a></li>
-                            <li><a href="/storages/add">Adicionar</a></li>
-                        </ul>
-                    </li>
-					<li><a href="#">Offsite</a>
-					    <ul>
-                            <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
-                            <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
-                            <li><a href="/procedures/list_offsite">Procedimentos</a></li>
+                            <li><a href="/restore/view/">Executar restauração</a></li>
                         </ul>
 				    </li>
 					<li><a href="#">Ferramentas</a>
@@ -102,6 +115,7 @@
                             <li><a href="/system/network_tool/ping/">Ping</a></li>
                             <li><a href="/system/network_tool/traceroute/">Traceroute</a></li>
                             <li><a href="/system/network_tool/nslookup/">NSLookup</a></li>
+                            <li><a href="/system/stat/">Sistema</a></li>                            
                         </ul>
 					</li>
 					<li><a href="#">Configurações</a>
